Agregar Swagger PasswordResetController
